  * New command chdir allows controller to re-home daemonproxy
  * fd.pipe now has optional FLAGS, which can be used to make socketpairs
  * New magic filehandle 'control.socket' gives equivlent of control.command
     and control.event on a single handle.
  * control.command and control.event are now aliases for control.socket,
     with any un-used direction shutdown.

2014-07-11	Version 1.1.0

  * Services now inherit environment from daemonproxy (see 5eb4b3ec)
  * New command service.tags allows attaching ad-hoc metadata
  * Fixed service.start delayed start feature and enabled cancellation
  * Guard against child procs running parent signal handlers during fork

2014-03-09	Version 1.0.0

  * Initial Release
